# robot-teleoperation

./: .gitignore  .gitmodules  README.md  index.html  main.py  package-lock.json  pick_n_place.bag  pyproject.toml
src/: main.js
src/camera_calibration/: caputre_calibrate.py
src/camera_calibration/calibration_results/: cam_calib_(10x7)_22.0mm.npz  cam_calib_(10x7)_22.0mm_1920x1080.npz
src/examples/: image_callbacks.py  tracking_publisher.py
src/mujoco/: process_landmarks.py
src/mujoco/recorded/: processed_landmarks_20260617_005532.csv
src/ros/: package.xml  setup.cfg  setup.py
src/ros/landmark_msgs/: CMakeLists.txt  package.xml
src/ros/landmark_msgs/msg/: BodyLandmark.msg  HandLandmark.msg  LandmarkMsg.msg
src/ros/launch/: hand_tracking.launch.py
src/ros/mm_robot_teleop/: landmark_marker.py
src/ros/robot_teleop/: package.xml  setup.py
src/ros/robot_teleop/launch/: hand_tracking.launch.py
src/ros/robot_teleop/robot_teleop/: hand_pose_tracker.py  landmark_processor.py  servo_keyboard.py
src/ros/rviz/: hand_tracking.rviz
src/web/: index.html  main.js  package-lock.json  package.json
src/web/V1/: main.js
